# advent-of-code-2020

./: .bazelrc  .dockerignore  .gitignore  .pre-commit-config.yml  BUILD.bazel  Dockerfile  readme.md
apps/password_philosophy/: BUILD  __main__.py
apps/report_repair/: BUILD  __main__.py
libs/passport_processing/: __init__.py
libs/password_philosophy/: BUILD  __init__.py
libs/password_philosophy/tests/: test_password_philosophy.py  test_solutions.py
libs/report_repair/: BUILD  __init__.py
libs/report_repair/tests/: test_report_repair.py  test_solutions.py
libs/tobaggan_trajectory/: BUILD  __init__.py
libs/tobaggan_trajectory/tests/: test_solutions.py  test_tobaggan_trajectory.py
