package_group(
    name = "passport_processing",
    packages = [
        "//apps/passport_processing",
        "//libs/passport_processing",
    ],
)

package_group(
    name = "password_philosophy",
    packages = [
        "//apps/password_philosophy",
        "//libs/password_philosophy",
    ],
)

package_group(
    name = "report_repair",
    packages = [
        "//apps/report_repair",
        "//libs/report_repair",
    ],
)


package_group(
    name = "tobaggan_trajectory",
    packages = [
        "//apps/tobaggan_trajectory",
        "//libs/tobaggan_trajectory",
    ],
)
